# STS2LLM

./: .env.example  .gitignore  PROJ.md  README.md  pyproject.toml
data/manual/: card_annotations.json  enemy_annotations.json
data/processed/wiki_gg/: buffs_pack.json  card_pack.json  debuffs_pack.json  enemy_pack.json  keyword_pack.json  relic_pack.json
src/sts2llm/: agent.py  cli.py  config.py  enemy_pack.py  logging_utils.py  reference_index.py  reference_packs.py  sts2_api.py  tools.py  web.py
src/sts2llm/content/: __init__.py  enemy_pack.py  games_gg_guides.py  godot_pck.py  reference_packs.py  wiki_gg_crawler.py
